migrated to using context/provider for data
